# ur10_interface

./: CMakeLists.txt  README.md  package.xml
config/: config_gazebo.yaml  config_real.yaml
launch/: teleop_interface.launch.py  teleop_interface_gazebo.launch.py  teleop_interface_real.launch.py
scripts/: delta_target_input.py  input_command.py  mode_manager.py  target_pose.py  teleop_controller.py  visualize_target_pose.py
src/: talker_cpp.cpp  task2joint.cpp  task2joint_real.cpp
ur10_interface/: common_utils.py
